fixed bugs on mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -439,10 +439,14 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 12px;
   width: 200px;
   height: 50px;
   padding-left: 28px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-form__button {
+    margin-left: 12px;
+  }
 }
 
 .menu-button-list {
@@ -857,7 +861,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 400px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -1534,14 +1537,14 @@ img {
   padding: 40px;
   position: absolute;
   opacity: 1;
-  top: 50%;
+  top: 30px;
   left: 50%;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  -webkit-transform: translate(-50%, -50%) scale(1);
-          transform: translate(-50%, -50%) scale(1);
+  -webkit-transform: translate(-50%) scale(1);
+          transform: translate(-50%) scale(1);
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
   -webkit-transition-property: opacity, -webkit-transform;
@@ -1926,6 +1929,16 @@ img {
 
 @media screen and (max-width: 767px) {
   .mobile-menu__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -1953,6 +1966,34 @@ img {
   .mobile-menu__container {
     display: none;
   }
+}
+
+.mobile-menu__navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+}
+
+.mobile-menu__control-thumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
 }
 
 .mobile-menu__nav {
@@ -1983,7 +2024,6 @@ img {
 }
 
 .mobile-menu__contacts {
-  margin-top: 302px;
   margin-left: 40px;
   margin-bottom: 64px;
   font-weight: 500;
@@ -2001,6 +2041,7 @@ img {
 
 .mobile-menu__social {
   margin-left: 40px;
+  margin-bottom: 48px;
 }
 
 .mobile-menu__social--item {
