--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -64,11 +64,13 @@
 .footer-form__button {
   display: flex;
   align-items: center;
-
-  margin-left: 12px;
   width: 200px;
   height: 50px;
   padding-left: 28px;
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
+  }
 }
 
 // PORTFOLIO
