--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,5 @@
 .hero {
   display: flex;
-  height: 400px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
