--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,5 +1,8 @@
 .mobile-menu__container {
   @media screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -20,6 +23,20 @@
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
+
+.mobile-menu__navigation {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.mobile-menu__control-thumb {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .mobile-menu__nav {
@@ -49,7 +66,6 @@
 }
 
 .mobile-menu__contacts {
-  margin-top: 302px;
   margin-left: 40px;
   margin-bottom: 64px;
   font-weight: 500;
@@ -67,6 +83,7 @@
 
 .mobile-menu__social {
   margin-left: 40px;
+  margin-bottom: 48px;
 }
 
 .mobile-menu__social--item {
