--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,13 +4,13 @@
   padding: 40px;
   position: absolute;
   opacity: 1;
-  top: 50%;
+  top: 30px;
   left: 50%;
   background-color: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%) scale(1);
   transition-duration: 250ms;
   transition-property: transform, opacity;
   transition-timing-function: $cubic-time;
